--- a/main.ipynb
+++ b/main.ipynb
@@ -916,7 +916,9 @@
    "source": [
     "The benchmark chosen for comparison of the Diffusion-TS method is TimeGAN, of Yoon et al., 2019. \n",
     "\n",
-    "The TimeGAN model has been trained on the same dataset of DIffusion-TS, but on a different machine due to compatibility problems, and the original and generated dataset reportedly saved in the folder './TimeGAN_output/ori_data_{name}.npy' and ./TimeGAN_output/generated_data_{name}.npy'.\n",
+    "The TimeGAN model has been trained on the same dataset of DIffusion-TS, but on a different machine due to compatibility problems. The original and generated dataset folder 'TimeGAN_output' must be downloaded from this [link](https://drive.google.com/drive/folders/1YlfhfQs5-iQzQy4fS0zq-mzH9I_IMTWW?usp=sharing) and unziped in the repository folder. \n",
+    "\n",
+    "The original and generated dataset are respectively saved as 'ori_data_{name}.npy' and 'generated_data_{name}.npy'.\n",
     "\n",
     "In this way the datas can be loaded and the performance evaluated in this notebook. The scores are computed in the same way as the socres of the Diffusion-TS are."
    ]
@@ -1443,7 +1445,7 @@
    "source": [
     "The benchmark chosen for comparison of the Diffusion-TS method is TimeGAN, of Yoon et al., 2019. \n",
     "\n",
-    "The TimeGAN model has been trained on the same dataset of DIffusion-TS, but on a different machine due to compatibility problems, and the original and generated dataset reportedly saved in the folder './TimeGAN_output/ori_data_{name}.npy' and ./TimeGAN_output/generated_data_{name}.npy'.\n",
+    "The TimeGAN model has been trained on the same dataset of DIffusion-TS, but on a different machine due to compatibility problems, and the original and generated dataset reportedly saved in the folder './TimeGAN_output/ori_data_{name}.npy' and ./TimeGAN_output/generated_data_{name}.npy' if downloaded correclty in the previous experiment.\n",
     "\n",
     "In this way the datas can be loaded and the performance evaluated in this notebook. The scores are computed in the same way as the socres of the Diffusion-TS are."
    ]
@@ -1875,7 +1877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
